--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -1,1 +1,35 @@
-<p>checkout works!</p>
+<div class="container">
+    <form class="form item" >
+        <mat-form-field class="form__element">
+            <input matInput type="text" placeholder="name" required [(ngModel)]="model.name" name="name" #name="ngModel">
+            <mat-error *ngIf="!name.valid || name.pristine">
+                Name is required
+            </mat-error>
+        </mat-form-field>
+
+        <mat-radio-group class="form__element">
+            <p>Escoja una opcion</p>
+            <mat-radio-button value="pickup" (change)="onPickUp(false)">pickup</mat-radio-button>
+            <mat-radio-button value="delivery" (change)="onPickUp(true)">Delivery</mat-radio-button>
+        </mat-radio-group>
+
+        <mat-form-field class="form__element">
+            <input matInput type="text" placeholder="Shipping Address" required [(ngModel)]="model.shippingAddress" name="shippingAddress" #shippingAddress="ngModel">
+        </mat-form-field>
+        <mat-form-field class="form__element">
+            <input matInput type="text" placeholder="City" required [(ngModel)]="model.city" name="City" #City="ngModel">
+        </mat-form-field>
+        <mat-form-field class="form__element">
+            <mat-label>Select the Store</mat-label>
+            <mat-select [(ngModel)]="model.store" name="store" #store="ngModel">
+                <mat-option [value]="tienda" *ngFor="let tienda of tiendas">{{tienda.name}}-{{tienda.openingHours}}</mat-option>
+            </mat-select>
+        </mat-form-field>
+    </form>
+</div>
+
+<div class="container__button">
+    <button [disabled]="" mat-raised-button color="primary" type="submit">
+        Checkout
+    </button>
+</div>
