--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,8 +1,8 @@
 <p>
     <mat-toolbar color="primary">
-      <span>My Store Aplication </span>
+      <a [routerLink]="['/']"> <span>My Store Aplication </span></a>
       <span class="spacer"></span>
-      <app-cart></app-cart>
+      <app-cart class="mouseHover" (click)="goToCheckout()"></app-cart>
     </mat-toolbar>
   </p>
   
