--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <form class="form item" >
+    <form class="form item" (ngSubmit)="onSubmit()" #checkoutForm="ngForm">
         <mat-form-field class="form__element">
             <input matInput type="text" placeholder="name" required [(ngModel)]="model.name" name="name" #name="ngModel">
             <mat-error *ngIf="!name.valid || name.pristine">
@@ -9,27 +9,36 @@
 
         <mat-radio-group class="form__element">
             <p>Escoja una opcion</p>
-            <mat-radio-button value="pickup" (change)="onPickUp(false)">pickup</mat-radio-button>
+            <mat-radio-button value="pickup" (change)="onPickUp(false)" checked>pickup</mat-radio-button>
             <mat-radio-button value="delivery" (change)="onPickUp(true)">Delivery</mat-radio-button>
         </mat-radio-group>
 
-        <mat-form-field class="form__element">
-            <input matInput type="text" placeholder="Shipping Address" required [(ngModel)]="model.shippingAddress" name="shippingAddress" #shippingAddress="ngModel">
-        </mat-form-field>
-        <mat-form-field class="form__element">
-            <input matInput type="text" placeholder="City" required [(ngModel)]="model.city" name="City" #City="ngModel">
-        </mat-form-field>
-        <mat-form-field class="form__element">
-            <mat-label>Select the Store</mat-label>
-            <mat-select [(ngModel)]="model.store" name="store" #store="ngModel">
-                <mat-option [value]="tienda" *ngFor="let tienda of tiendas">{{tienda.name}}-{{tienda.openingHours}}</mat-option>
-            </mat-select>
-        </mat-form-field>
+        <ng-container *ngIf="needDelivery; else showStores">
+            <mat-form-field class="form__element">
+                <input matInput type="text" placeholder="Shipping Address" required [(ngModel)]="model.shippingAddress" name="shippingAddress" #shippingAddress="ngModel">
+            </mat-form-field>
+            <mat-form-field class="form__element">
+                <input matInput type="text" placeholder="City" required [(ngModel)]="model.city" name="City" #City="ngModel">
+            </mat-form-field>
+        </ng-container>
+       
+        <ng-template #showStores>
+            <mat-form-field class="form__element">
+                <mat-label>Select the Store</mat-label>
+                <mat-select [(ngModel)]="model.store" name="store" #store="ngModel" required="true">
+                    <mat-option [value]="tienda" *ngFor="let tienda of tiendas">{{tienda.name}}-{{tienda.openingHours}}</mat-option>
+                </mat-select>
+            </mat-form-field>
+        </ng-template>    
+     
+        <app-details></app-details>
+        <div class="container__button">
+            <button [disabled]="!checkoutForm.form.valid" mat-raised-button color="primary" type="submit">
+                Checkout
+            </button>
+        </div>
+       
+       
+
     </form>
-</div>
-<app-details></app-details>
-<div class="container__button">
-    <button [disabled]="" mat-raised-button color="primary" type="submit">
-        Checkout
-    </button>
 </div>
