--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <form class="form item" (ngSubmit)="onSubmit()" #checkoutForm="ngForm">
+    <form class="form item"  #checkoutForm="ngForm">
         <mat-form-field class="form__element">
             <input matInput type="text" placeholder="name" required [(ngModel)]="model.name" name="name" #name="ngModel">
             <mat-error *ngIf="!name.valid || name.pristine">
@@ -33,7 +33,7 @@
      
         <app-details></app-details>
         <div class="container__button">
-            <button [disabled]="!checkoutForm.form.valid" mat-raised-button color="primary" type="submit">
+            <button [disabled]="!checkoutForm.form.valid" mat-raised-button color="primary" type="submit" (click)="onSubmit(checkoutForm)">
                 Checkout
             </button>
         </div>
