validaciones a stock añadidas

--- a/src/app/pages/products/product/product.component.html
+++ b/src/app/pages/products/product/product.component.html
@@ -8,6 +8,6 @@
        {{product.description}}
     </mat-card-content>
     <mat-card-actions>
-        <app-confirm-button [product]="product" (click)="onClickToAdd()"></app-confirm-button>
+        <app-confirm-button [product]="product" (clickToAdd)="onClickToAdd()"></app-confirm-button>
     </mat-card-actions>
 </mat-card>
