validaiones y bthank page terminada

--- a/src/app/pages/checkout/thanks-page/thanks-page.component.html
+++ b/src/app/pages/checkout/thanks-page/thanks-page.component.html
@@ -1,1 +1,7 @@
-<p>thanks-page works!</p>
+<div class="container">
+    <h1 class="title">Thank you for buying</h1>
+    <p class="content">Your order is ready</p>
+    <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque, 
+        tempora perspiciatis officia aliquam dolores eum dicta ullam 
+        id culpa voluptatum omnis alias laboriosam ratione consectetur temporibus consequatur sed quae odit.</span>
+</div>
